PR 57100: fix install flag handling for newly added GPT partitions, fix multiple install flags when updating existing partitions.